...
        deviceLocale: Locale.current.identifier(.bcp47),
        timezone: TimeZone.current.identifier
    )
}

func analyticsDeviceModelIdentifier() -> String? {
    if let simulatorModel = ProcessInfo.processInfo.environment["SIMULATOR_MODEL_IDENTIFIER"] {
        return simulatorModel
    }

    var systemInfo = utsname()
    guard uname(&systemInfo) == 0 else {
        return nil
...
